<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_white_corner"
    android:orientation="vertical">

    <com.zoom2uwarehouse.font.TextViewMedium
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/triadic"
        android:text="@string/scan_title" />

    <com.zoom2uwarehouse.font.EditViewMedium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:id="@+id/editText"
        android:maxLines="1"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@drawable/custom_button_curve_border"
        android:inputType="textPersonName"
        android:hint="@string/scan_hint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:id="@+id/view"

        android:background="@color/triadic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/triadic"
        android:orientation="horizontal">

        <com.zoom2uwarehouse.font.TextViewMedium
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:layout_marginEnd="1dp" />

        <com.zoom2uwarehouse.font.TextViewMedium
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="1dp" />
    </LinearLayout>

</LinearLayout>
