<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/barcodeViewReassignView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/light_color">

        <com.zoom2uwarehouse.font.TextViewBold
            android:id="@+id/barcodeViewInfoTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/barcodeViewManualScanBtn"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/scan_bar"
            android:textSize="15sp" />

        <com.zoom2uwarehouse.font.TextViewMedium
            android:id="@+id/barcodeViewInfoTxt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/barcodeViewManualScanBtn"
            android:layout_toStartOf="@+id/barcodeViewManualScanBtn"
            android:text="@string/text_scan"
            android:textSize="10dp"
            android:lineSpacingExtra="3dp"
            />

        <com.zoom2uwarehouse.font.TextViewBold
            android:id="@+id/barcodeViewManualScanBtn"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button_round_5"
            android:gravity="center"
            android:text="@string/manual_scan"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/barcodeViewCameraPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcodeViewReassignView">

        <ImageView
            android:id="@+id/barcodeViewTargetingBox"
            android:layout_width="320dp"
            android:contentDescription="@string/barcode_scanner"
            android:layout_height="120dp"
            android:background="@drawable/corner_border_transparent_bg"
            >
        </ImageView>

    </FrameLayout>

</RelativeLayout>