<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.zoom2uwarehouse.forgot_password.Forgot_Password">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/white"
        android:id="@+id/relativeLayout3">

        <ImageView
            android:id="@+id/backFrom"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="center"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="Close Button"
            android:src="@drawable/nav_back" />



        <com.zoom2uwarehouse.font.TextViewMedium
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/forgot_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout3">

        <com.zoom2uwarehouse.font.TextViewMedium
            android:id="@+id/textView53"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/msg_forgot"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
             />

        <com.zoom2uwarehouse.font.EditViewMedium
            android:id="@+id/editText4"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView53"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_curve"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"/>

        <com.zoom2uwarehouse.font.TextViewMedium
            android:id="@+id/textView54"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_round"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </RelativeLayout>
</RelativeLayout>
