<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_white_corner"
    android:orientation="vertical">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.zoom2uwarehouse.font.TextViewMedium
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/triadic"
            android:text="@string/TextView" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView10"
            android:background="@color/triadic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:background="@color/triadic"
            android:orientation="horizontal">

            <com.zoom2uwarehouse.font.TextViewMedium
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel" />

            <com.zoom2uwarehouse.font.TextViewMedium
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/logout"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>
