<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context="com.zoom2uwarehouse.login.Login">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_centerVertical="true"
      android:layout_alignParentTop="true"
      android:paddingTop="20dp"
      android:layout_height="match_parent" >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <ImageView
              android:id="@+id/imageView2"
              android:layout_width="130dp"
              android:layout_height="60dp"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:contentDescription="@string/app_name"
              android:src="@drawable/logo_icon" />

          <com.zoom2uwarehouse.font.TextViewMedium
              android:id="@+id/logoUpperTxt"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/imageView2"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="5dp"
              android:textSize="36dp"
              android:text="@string/app_name"
              android:textColor="@android:color/white" />

          <ImageView
              android:id="@+id/imageView3"
              android:layout_width="200dp"
              android:layout_height="150dp"
              android:layout_centerHorizontal="true"
              android:layout_below="@+id/logoUpperTxt"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="15dp"
              android:contentDescription="@string/app_name"
              android:src="@drawable/icon_warehouse" />

          <!--<TextView-->
              <!--android:id="@+id/textView"-->
              <!--android:layout_width="wrap_content"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:layout_below="@+id/imageView3"-->
              <!--android:layout_centerHorizontal="true"-->
              <!--android:text="Warehouse"-->
              <!--android:textColor="@android:color/white"-->
              <!--android:textSize="36sp" />-->

          <com.zoom2uwarehouse.font.EditViewMedium
              android:id="@+id/editText2"
              android:layout_width="270dp"
              android:layout_height="wrap_content"
              android:layout_below="@+id/imageView3"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="30dp"
              android:background="@drawable/login_field_bg"
              android:hint="@string/email"
              android:text=""
              android:textSize="16dp"
              android:textColorHint="@color/white"
              android:textColor="@color/white"
              android:inputType="textEmailAddress"
              android:maxLines="1"
              android:padding="10dp" />

          <com.zoom2uwarehouse.font.EditViewMedium
              android:id="@+id/editText3"
              android:layout_width="270dp"
              android:layout_height="wrap_content"
              android:layout_below="@+id/editText2"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="25dp"
              android:textColorHint="@color/white"
              android:textColor="@color/white"
              android:background="@drawable/login_field_bg"
              android:hint="@string/password"
              android:inputType="textPassword"
              android:maxLines="1"
              android:textSize="16dp"
              android:padding="10dp" />

          <com.zoom2uwarehouse.font.TextViewMedium
              android:id="@+id/textView2"
              android:layout_width="270dp"
              android:layout_height="wrap_content"
              android:layout_below="@+id/editText3"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="50dp"
              android:background="@drawable/round_btn_bg_skyblue"
              android:gravity="center"
              android:padding="16dp"
              android:text="@string/login"
              android:textColor="@android:color/white"
              android:textSize="18sp" />

          <com.zoom2uwarehouse.font.TextViewMedium
              android:id="@+id/textView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/textView2"
              android:layout_centerHorizontal="true"
              android:layout_marginEnd="20dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginStart="20dp"
              android:layout_marginTop="20dp"
              android:paddingTop="10dp"
              android:paddingBottom="20dp"
              android:text="@string/forgot"
              android:textColor="@android:color/white" />

      </RelativeLayout>
  </ScrollView>
</RelativeLayout>
